@@ -1,7 +1,7 @@
 AUX junit-3.8.2-build.xml 3179 RMD160 218ac28d9c167b719f6ace32479dd559b3ed010e SHA1 e4f2e9076f93c2700e096f05a426402cb7730ad3 SHA256 ab78187535ef97b9984d969f313aff39944efbb57427071a8851f973dedf9042
 DIST junit3.8.2.zip 461426 RMD160 c66d64d8aa738460490e62fd332c112076d9b662 SHA1 701578302e244e5173dca3040cce0774a5c39645 SHA256 aae23d20e6f4dc45b4bf0b10fedcbd209c100342a0cafce1aa07d2da6da1f24a
 DIST junit4.4.zip 813114 RMD160 915d20222030f5678a2d74cf07080a305c0c1407 SHA1 83be34288bf8e595a6eb5a1de9c6cd96042d8c32 SHA256 9bbe7c16b122acd9d918d86ddab8b77836ffb03f9ceb2f0379be653fdc738b6d
-EBUILD junit-3.8.2-r1.ebuild 1155 RMD160 5c0caef5bf24e0b552af59c5ceb2ff4b6eddde68 SHA1 01d6daf457c2d726b5891af68e9c37419e824d16 SHA256 f5afb718d7a1f8486fd38dacaead62c5a22d0f21745659f6c2edbd66d85d9852
-EBUILD junit-4.4-r1.ebuild 2229 RMD160 b103e33f4d1a5a5d7e9a777a7e48c9aba4ab8640 SHA1 bffae1f78503d1367dc46dbf79aff421c3b5e28c SHA256 55d8c75d363fce1420366ac8bc084ff6f18e3d066ab90a66cd16cbe0663fa43a
-MISC ChangeLog 5476 RMD160 3424ed82f8e5933d7b8f6c9fe0f888f10a3e8050 SHA1 5b8e84839911e57a49a14e562760096285acfc77 SHA256 f1feef01510245edaa1a4aaf1612ac535d2acb6abac0d3e615623110ad722ca3
+EBUILD junit-3.8.2-r1.ebuild 1081 RMD160 c63ff1de836b35c967d0d217ea9c7ca8dec1532b SHA1 b9e92cbef30179aa4706cd44f8aaefe245de53de SHA256 5d52a314f53e5aec8d364b270c66f70f02844f157cae0742d90cb4165e9c6581
+EBUILD junit-4.4-r1.ebuild 2231 RMD160 45650613899af7b8df2009561401b7c0c7ba7ac6 SHA1 8eb58d7e302e9f0ab522a678b9ddd8bc9465da9c SHA256 e87b21d4634ac77cef7378f24ac34485e294237bd859e33b91aabf8c16db5249
+MISC ChangeLog 5682 RMD160 8cc27fdd80351528b3568f89207d3f234ae00e3d SHA1 18a7915a1f392811cd58b1ca5037ec0f515cce66 SHA256 ae13213aa72263f5662d4be5f7c5f2e382e28ec5e759d5d2e31fc30fe86cb193
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
