@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/junit-4.4-r1.ebuild,v 1.3 2008/01/14 00:26:44 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/junit-4.4-r1.ebuild,v 1.4 2008/01/16 20:19:04 armin76 Exp $
 
 EAPI="prefix"
 
