@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/junit
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.37 2008/01/14 00:26:44 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.39 2008/01/16 21:36:40 caster Exp $
+
+  16 Jan 2008; Vlastimil Babka <caster@gentoo.org> junit-3.8.2-r1.ebuild:
+  WANT_SPLIT_ANT no longer needed.
+
+  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> junit-4.4-r1.ebuild:
+  Add ~ia64 wrt #129773
 
   14 Jan 2008; Christian Faulhammer <opfer@gentoo.org> junit-4.4-r1.ebuild:
   keyworded ~x86, bug 129773
